2002-08-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/text-context.c (sp_text_context_finalize): Do not use desktop here
	(sp_text_context_finish): Implement, release desktop stuff here

	* src/sp-text.c (sp_text_normalized_bpath): New method
	(sp_text_print): Implement, still needs SPChars method

	* src/sp-chars.c (sp_chars_normalized_bpath): New method

	* src/path-chemistry.c (sp_selected_path_to_curves): Convert the new text object

	* src/interface.c (sp_ui_file_menu): Use helpers, the right export dialog

	* src/draw-context.c (sp_pen_context_finish): Flush object
	(sp_pen_context_root_handler): Added 'BackSpace', should work OK now

	* src/event-context.c (sp_event_context_finish): New method and virtual method

	* src/desktop.c (sp_desktop_set_event_context): Finish eventcontext

	* src/helper/curve.c (sp_curve_backspace): New method

2002-08-24  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/curve.c (sp_curve_append): Handle open/closed end and start

	* src/preferences-skeleton.h: Added pen tool, made AI style default

	* src/draw-context.c (sp_draw_context_setup): Set attach
	(sp_draw_context_root_handler): React to '+' key
	(spdc_set_attach): Set/clear append mode
	(spdc_attach_selection): Renamed
	(spdc_detach_selection): New method
	(spdc_reset_white): Only need white, not all colors
	(sp_pencil_context_root_handler): Destroy green anchor on release
	(sp_pen_context_setup): Handle "mode" attribute
	(sp_pen_context_set): Ditto
	(sp_pen_context_root_handler): Has now AI style (default) and click-click modes
	(spdc_pen_set_ctrl): Handle modes
	(spdc_pen_finish): New method

2002-08-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/sp-attribute-widget.h: It can now be attached to mere SPRepr too

	* src/dialogs/sp-attribute-widget.c (sp_attribute_widget_new_repr): New constructor
	(sp_attribute_widget_set_repr): New method
	(sp_attribute_table_new_repr): New constructor
	(sp_attribute_table_set_repr): New method
