@@ -1,3 +1,10 @@
+2002-08-26  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/sp-chars.c (sp_chars_do_print): New direct method
+	(sp_chars_print_bpath): Helper
+
+	* src/gradient-chemistry.c (sp_item_repr_set_style_gradient): Set recursive
+
 2002-08-25  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/text-context.c (sp_text_context_finalize): Do not use desktop here
